fix: 공연 사진 등록 수정
