# swagger-output.json
@@ -294,8 +294,15 @@
           "Performance"
         ],
         "summary": "공연 사진 저장",
-        "description": "공연 사진 저장",
-        "parameters": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "image",
+            "in": "formData",
+            "type": "file",
+            "description": "공연 사진 저장"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -1121,7 +1128,7 @@
           "type": "string",
           "example": "행사 상세 설명"
         },
-        "infos": {
+        "tickets": {
           "type": "array",
           "items": {
             "type": "object",
@@ -1136,7 +1143,7 @@
               },
               "number": {
                 "type": "string",
-                "example": "좌석 갯수"
+                "example": "좌석 번호"
               }
             }
           }
